# StructOvO

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/structovo/: _packet.py
