[tool.poetry]
name = "structovo"
version = "0.1.0"
description = ""
authors = ["GuangChen2333 <guangchenworks@outlook.com>"]
readme = "README.md"
packages = [
    { include = "structovo", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
